<resources>
    <string name="app_name">Starbucks ID</string>
    <string name="id_setting_language">Pengaturan Bahasa</string>
    <string name="id_setting_passcode">Kode Sandi</string>
    <string name="id_setting_passcode_off">Matikan Kode Sandi</string>
    <string name="id_setting_passcode_change">Ubah Kode Sandi</string>
    <string name="id_sign_out">KELUAR</string>
    <string name="id_confirm">OK</string>
    <string name="id_cancel">BATAL</string>
    <string name="id_share_app_header">Bagikan Aplikasi Ini Melalui</string>
    <string name="id_sign_up">DAFTAR</string>
    <string name="id_sign_in">MASUK</string>
    <string name="id_card_number">Nomor Kartu</string>
    <string name="id_hint_card_number">Nomor Kartu*</string>
    <string name="id_hint_username">Alamat Email*</string>
    <string name="id_hint_pwd">Kata Sandi*</string>
    <string name="id_hint_rec_pwd">Konfirmasi Ulang Kata Sandi*</string>
    <string name="id_hint_first_name">Nama Depan*</string>
    <string name="id_hint_last_name">Nama Belakang*</string>
    <string name="id_hint_dob">Tanggal Lahir*</string>
    <string name="id_hint_mobile_phone">No. Handphone*</string>
    <string name="id_add">TAMBAH</string>
    <string name="id_save">SIMPAN</string>
    <string name="id_hint_security_code">Kode Keamanan*</string>
    <string name="id_amenities">Fasilitas</string>
    <string name="id_get_dir">Dapatkan Petunjuk Arah</string>
    <string name="id_call_now">Hubungi Sekarang</string>
    <string name="id_open_hour">Waktu Beroperasi</string>
    <string name="id_operational_hour">Waktu Beroperasi :</string>
    <string name="id_search_store">Cari Store</string>
    <string name="id_near_by">Store Terdekat</string>
    <string name="id_signup_prof_header">Masukkan profil Anda</string>
    <string name="id_signup_card_header">Masukkan informasi kartu Anda</string>
    <string name="id_signup_acc_header">Masukkan informasi akun Anda</string>
    <string name="id_val_card_num">Masukkan Nomor Kartu</string>
    <string name="id_val_sec_code">Masukkan Kode Keamanan</string>
    <string name="id_val_username">Masukkan Email Pengguna</string>
    <string name="id_val_pwd">Masukkan Kata Sandi</string>
    <string name="id_val_r_pwd">Masukan konfirmasi ulang Kata Sandi</string>
    <string name="id_val_f_name">Masukkan Nama Depan</string>
    <string name="id_val_l_name">Masukkan Nama Belakang</string>
    <string name="id_val_dob">Masukkan Tanggal Lahir</string>
    <string name="id_val_mobile">Masukkan No Handphone</string>
    <string name="id_val_otp">Masukkan OTP Validasi</string>
    <string name="id_val_pwd_not_match">Kata Sandi Tidak Sesuai</string>
    <string name="id_val_pwd_8">Password minimal harus 8 karakter</string>
    <string name="id_val_pwd_comb">Password terdiri dari kombinasi (3) jenis karakter: huruf kecil, huruf besar, angka , dan karakter spesial (e.g.,!, @, #, $, dll)</string>
    <string name="id_val_email_valid">Email tidak valid</string>
    <string name="id_sbux_card_16_digit">Nomor kartu harus memiliki 16 digit nomor</string>
    <string name="id_val_sc_8">Kode keamanan minimal harus 8 karakter</string>
    <string name="id_cant_reload_exc_bal">Maksimum saldo dalam kartu adalah Rp. 2.000.000. Silakan pilih nilai lainnya</string>
    <string name="id_cur_month">Bulan Sekarang</string>
    <string name="id_last_month">Bulan Sebelumnya</string>
    <string name="id_phone_code">+62</string>
    <string name="id_val_cb_signup">Saya tidak ingin menerima komunikasi pemasaran langsung dari Starbucks Indonesia</string>
    <string name="id_val_hint_signup">Harap diperhatikan bahwa jika Anda anggota Starbucks dan Anda memilih untuk tidak menerima komunikasi pemasaran langsung dari kami, kami akan tetap mengirimkan komunikasi keanggotaan (termasuk namun tidak terbatas pada informasi tentang program keanggotaan, hadiah Starbucks, dan pembaruan keanggotaan).</string>
    <string name="id_dob">Tanggal lahir</string>
    <string name="pay_detail_id">Pindai ini untuk Menukarkan Reward atau Membayar</string>
    <string name="sure_logout_id">Apakah anda yakin ingin keluar?</string>
    <string name="id_val_wrong_mobile">Nomor telepon anda salah</string>
    <string name="id_val_wrong_mobile2">Nomor telepon anda salah</string>
    <string name="location_permission_detail_id">Pengguna menolak untuk berbagi lokasi ke aplikasi.</string>
    <string name="no_card_display_detail_id">Tidak ada kartu yang bisa di tampilkan</string>
    <string name="warning_id">Peringatan</string>
    <string name="api_maps_key">AIzaSyB9sYbe6OReXG9w8CtH0PeSEav1xucvhXY</string>
    <string name="cur_month">This Month</string>
    <string name="last_month">Last Month</string>
    <string name="en_operational_hour">Operational Hour :</string>
    <string name="en_val_f_name">Please fill first name</string>
    <string name="en_val_l_name">Please fill last name</string>
    <string name="en_val_m_phone">Please fill mobile phone</string>
    <string name="en_cant_reload_exc_bal">Maximum card balance is Rp. 2.000.000. Please select other value</string>
    <string name="en_val_pwd_8">Password must have minimum 8 characters</string>
    <string name="en_val_credit_card_no">Please fill credit card number</string>
    <string name="en_val_pwd_comb">Passwords must contain some combination of at least three (3) of the following classes of characters: lowercase, uppercase, numeric, and “special” (e.g.,!, @, #, $, etc.) characters.</string>
    <string name="loading">Loading</string>
    <string name="cancel">CANCEL</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="pay_detail">Scan this to Redeem Reward or Pay</string>
    <string name="balance_error">Balance Error</string>
    <string name="no_card_display_detail">No cards to be displayed</string>
    <string name="location_permission_detail">User deny to share location to the app.</string>
    <string name="sure_logout">Are you sure want to sign out?</string>
    <string name="warning">Warning</string>
    <string name="val_card_num">Please enter the Card Number</string>
    <string name="sbux_card_16_digit">Card number must have 16 digits of number</string>
    <string name="val_sec_code">Please enter the Security Code</string>
    <string name="val_sc_8">Security Code must have minimum 8 characters</string>
    <string name="val_username">Please enter your Email</string>
    <string name="val_email_valid">Email format is invalid</string>
    <string name="val_pwd">Please enter your Password</string>
    <string name="val_r_pwd">Please reconfirm your Password</string>
    <string name="val_pwd_not_match">Your Password does not match the confirmation password</string>
    <string name="val_f_name">Please enter your First Name</string>
    <string name="val_l_name">Please enter your Last Name</string>
    <string name="val_dob">Please enter your Date of Birth</string>
    <string name="val_mobile">Please enter your Mobile Phone</string>
    <string name="val_otp">please enter your OTP Number</string>
    <string name="val_wrong_mobile">Invalid mobile phone number</string>
    <string name="val_wrong_mobile2">Invalid mobile phone number</string>
    <string name="dob">Date of Birth</string>
    <string name="local_enc">QW5wIzE5MTExOTkx</string>
    <string name="local_salt">VHJvamFuIzE5MTkxOQ</string>
    <string name="rest_content_auth">andk93-h-infotech.co.id</string>
    <string name="rest_mob_id">mob-AjdrnOuTPIlvtWcN</string>
    <string name="rest_mob_key">mob-key-eLazpUIKB4Nasm6ED2cOhfzyU</string>
    <string name="key_algorithm">AES</string>
    <string name="factory_algorithm">AES/CBC/PKCS5PADDING</string>
    <string name="enc_iv">12mgf74yhAh21353</string>
    <string name="enc_key">Pr3s1d4nt</string>
    <string name="passcode_b">vRwJUg9ux5okz8IU/5b6RA==</string>
    <string name="passcode">vIsGOdkqPtVrQL+bWoZQhw==</string>
    <string name="refresh_token">O1evXChNcL6tBGn2XWgqLe2WSuWhdQudpmRoXPY4m9A=</string>
    <string name="acc_token">BR5F1AwFdp9jAKpaHaQkvQ==</string>
    <string name="email">7dRFYn2AhyaPj4WbkdBsCg==</string>
    <string name="pn">p7CQIFhTHeB5eHZYSwY4daZFONZE9nAFTN9ffMpKt/M=</string>
    <string name="lang">ql7A1gC3hOPEethQ3r8FPQ==</string>
    <string name="stp">MLIgnG7kMHcpixPSdJY2Sg==</string>
    <string name="login_session">wwodkUh1jUtDtwbdWe7Gaw==</string>
    <string name="first_launch">Jbd9Q3Ypr8unYhAAnM4QYA==</string>
    <string name="pref_name">com.starbucks.id</string>
    <string name="fc_algorithm">PBEWithSHA256And256BitAES-CBC-BC</string>
    <string name="f_order_t">Menu</string>
    <string name="f_pay_t">Starbucks Card</string>
    <string name="f_store_t">Our Store</string>
    <string name="f_Inbox_t">Inbox</string>
    <string name="f_pay_reload">Top up</string>
    <string name="f_pay_reload_id">Isi Ulang</string>
    <string name="f_message">Message</string>
    <string name="f_message_id">Pesan</string>
    <string name="f_offers">Offers</string>
    <string name="f_offers_id">Penawaran</string>
    <string name="no_cards">You have no Card</string>
    <string name="no_activity">You have no activities</string>
    <string name="hint_email">Email</string>
    <string name="hint_address">Address</string>
    <string name="hint_city">City</string>
    <string name="hint_country">Country</string>
    <string name="hint_beverage_id">Minuman favorit saya</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_cancel_id">Batal</string>
    <string name="btn_register">Register</string>
    <string name="mt_notif_id">Sayangnya server saat ini tidak tersedia atau sibuk, silakan coba lagi.</string>
    <string name="mt_notif">Unfortunately the server is currently unavailable or busy, please try again.</string>
    <string name="it_notif_id">Saat ini Anda tidak terhubung ke Internet.\n
        Harap sambungkan ke internet.</string>
    <string name="it_notif">Currently you are not connected to Internet.\n
        Please connect to Internet.
    </string>
    <string name="active_id">Aktif</string>
    <string name="active">Active</string>
    <string name="deactive_id">Tidak Aktif</string>
    <string name="deactive">Inactive</string>
    <string name="title_add_card">ADD NEW STARBUCKS CARD</string>
    <string name="title_add_card_id">TAMBAHKAN KARTU STARBUCKS BARU</string>
    <string name="msg_same_card">You can\'t transfer from the same card.</string>
    <string name="msg_same_card_id">Kamu tidak bisa transfer dari kartu yang sama.</string>
    <string name="subtitle_add_card">Collect stars and earn Rewards when you pay with a registered card</string>
    <string name="subtitle_add_card_id">Kumpulkan bintang untuk mendapatkan rewards saat anda membayar
        dengan kartu yang sudah di registrasikan.</string>
    <string name="hint_card_number">Card Number</string>
    <string name="hint_card_number_id">Nomor Kartu</string>
    <string name="hint_lost_card">LOST / STOLEN</string>
    <string name="hint_lost_card_id">HILANG / DICURI</string>
    <string name="hint_damaged_card">DAMAGED</string>
    <string name="hint_damaged_card_id">RUSAK</string>
    <string name="hint_card_security">PIN</string>
    <string name="hint_t_from">Transfer from :</string>
    <string name="hint_t_to">Transfer to :</string>
    <string name="bt_reload">TOP UP</string>
    <string name="bt_reason">Please Select Reason</string>
    <string name="bt_reason_id">Pilih Alasan</string>
    <string name="bt_confirm">Confirm</string>
    <string name="bt_select">SELECT STARBUCKS CARD</string>
    <string name="submit">Submit</string>
    <string name="submit_id">Kirim</string>
    <string name="timestamp">As of </string>
    <string name="timestamp_id">Terakhir diperbarui </string>
    <string name="hint_lost">If you need further assistance, please call our Customer Care at (021) 1-500-078 or e-mail to customer.care@starbucks.co.id</string>
</resources>