<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/CLBase"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/NSV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/CLRepNSVBase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <ProgressBar
                android:id="@+id/pb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/ivCard"
                app:layout_constraintDimensionRatio=""
                app:layout_constraintEnd_toEndOf="@+id/ivCard"
                app:layout_constraintStart_toStartOf="@+id/ivCard"
                app:layout_constraintTop_toTopOf="@+id/ivCard" />

            <ImageView
                android:id="@+id/ivCard"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="42dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="42dp"
                android:background="@drawable/vwh_rc"
                android:elevation="4dp"
                android:scaleType="centerCrop"
                android:src="@drawable/vwh_rc"
                android:visibility="invisible"
                app:layout_constraintDimensionRatio="4:2.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btCard" />

            <Button
                android:id="@+id/btCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:elevation="4dp"
                android:paddingStart="10dp"
                android:paddingEnd="18dp"
                android:text="@string/bt_select"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/ivCard"
                app:layout_constraintStart_toStartOf="@+id/ivCard"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ivBtCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/ic_action_bellow"
                android:elevation="5dp"
                app:layout_constraintBottom_toBottomOf="@+id/btCard"
                app:layout_constraintEnd_toEndOf="@+id/btCard"
                app:layout_constraintTop_toTopOf="@+id/btCard" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:elevation="6dp"
                android:nestedScrollingEnabled="false"
                android:visibility="gone"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_constraintEnd_toEndOf="@+id/btCard"
                app:layout_constraintStart_toStartOf="@+id/btCard"
                app:layout_constraintTop_toBottomOf="@+id/btCard" />

            <com.starbucks.id.controller.extension.extendedView.CustomTextView
                android:id="@+id/tvCardNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="TextView"
                android:textColor="@color/gray_dop"
                app:layout_constraintEnd_toStartOf="@+id/ibStatFro"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="@+id/ivCard"
                app:layout_constraintTop_toBottomOf="@+id/ivCard" />

            <ImageButton
                android:id="@+id/ibStatFro"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@android:color/transparent"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:scaleType="fitStart"
                android:src="@drawable/def_card"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/tvCardNo"
                app:layout_constraintDimensionRatio="h,1:1"
                app:layout_constraintEnd_toEndOf="@+id/ivCard"
                app:layout_constraintStart_toEndOf="@+id/tvCardNo"
                app:layout_constraintTop_toTopOf="@+id/tvCardNo" />

            <com.starbucks.id.controller.extension.extendedView.CustomTextView
                android:id="@+id/tvBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Rp. 5.000"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintEnd_toStartOf="@+id/ibRefresh"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvCardNo" />

            <ImageButton
                android:id="@+id/ibRefresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/ic_action_refresh"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/tvBalance"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tvBalance"
                app:layout_constraintTop_toTopOf="@+id/tvBalance" />

            <ProgressBar
                android:id="@+id/pbBalance"
                style="?android:attr/progressBarStyle"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/ibRefresh"
                app:layout_constraintEnd_toEndOf="@+id/ibRefresh"
                app:layout_constraintStart_toStartOf="@+id/ibRefresh"
                app:layout_constraintTop_toTopOf="@+id/ibRefresh" />

            <com.starbucks.id.controller.extension.extendedView.CustomTextView
                android:id="@+id/tvTS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="as of 13/04/2018 14:00"
                android:textColor="@color/gray_dop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvBalance" />

            <Button
                android:id="@+id/btReason"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableEnd="@drawable/ic_action_bellow"
                android:elevation="2dp"
                android:paddingEnd="8dp"
                android:text="@string/bt_reason"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/ivCard"
                app:layout_constraintStart_toStartOf="@+id/ivCard"
                app:layout_constraintTop_toBottomOf="@+id/tvTS" />

            <com.starbucks.id.controller.extension.extendedView.CustomTextView
                android:id="@+id/tvHint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/hint_lost"
                android:textColor="@color/gray_dop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btReason" />

            <Button
                android:id="@+id/btConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/base_btn_green"
                android:elevation="4dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/bt_confirm"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHint" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>